More information for students.

--- a/src/students.html
+++ b/src/students.html
@@ -162,9 +162,24 @@ figcaption {
 <p>We are we are recruiting PhD students and postdocs to work together in building a leading research lab
 for interpretable neural networks.  PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
-and mention your interest in my lab.  To reach out to me directly, <a href="mailto:d.bau@northeastern.edu">email me</a>
-with the words "Prospective Student" in the subject line, and attach a CV and links to any papers that represent your research
+and mention your interest in my lab.  To reach out to me directly,
+<a href="mailto:d.bau@northeastern.edu">email me</a>
+with the words "Prospective Student" in the subject line, and attach a CV
+and links to any papers that represent your research
 interests.  Prospective postdocs should reach out to me directly.
+</p>
+
+<p>Am I the right advisor for you?
+My <a href="http://davidbau.com/research/publications.html">previous publications</a>
+give you a sense for what research in my lab will be about.
+Also, I recently did an
+<a href="https://www.reddit.com/r/IAmA/comments/r5vte5/i_am_david_bau_and_i_study_the_structure_of_the/">AMA on Reddit</a>
+where you can see my perspectives and answers to a number of questions.
+You can also watch my
+<a href="https://www.youtube.com/watch?v=SPSobhMD7rc&t=241s">dissertation defense</a>
+to get a sense of the fundamental questions that motivate my research.  (Of course all of
+these talk about previous research, and in my lab we will work on new areas, which
+will be different.)
 </p>
 
 <p style="text-align:center"><a href="https://www.khoury.northeastern.edu/apply/phd-apply/">Apply here</a></p>
