--- a/src/students.html
+++ b/src/students.html
@@ -177,9 +177,8 @@ Also, I recently did an
 where you can see my perspectives and answers to a number of questions.
 You can also watch my
 <a href="https://www.youtube.com/watch?v=SPSobhMD7rc&t=241s">dissertation defense</a>
-to get a sense of the fundamental questions that motivate my research.  (Of course all of
-these talk about previous research, and in my lab we will work on new areas, which
-will be different.)
+to get a sense of the fundamental questions that motivate my research.  (Of course in my
+lab we will work on new topics which will move into new areas beyond previous research.)
 </p>
 
 <p style="text-align:center"><a href="https://www.khoury.northeastern.edu/apply/phd-apply/">Apply here</a></p>
