Move to baulab.info.

--- a/src/index.html
+++ b/src/index.html
@@ -672,7 +672,7 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
 <script>
 // Redirect to new location.
 if (window.location.host == 'people.csail.mit.edu') {
-  window.location.replace('http://davidbau.com/research/');
+  window.location.replace('http://baulab.info/');
 }
 </script>
 <script>
