Move to baulab.info.

--- a/src/cv.html
+++ b/src/cv.html
@@ -77,7 +77,7 @@ Boston, MA 02115
 <tr><td>Phone:&nbsp;</td>
   <td>+1-781-296-9825</td></tr>
 <tr><td>Website:&nbsp;</td>
-  <td><a href="http://davidbau.com/research/">http://davidbau.com/research</a></td></tr>
+  <td><a href="http://baulab.info/">http://davidbau.com/research</a></td></tr>
 <tr><td>Orcid ID:&nbsp;</td>
   <td><a href="https://orcid.org/0000-0003-1744-6765">0000-0003-1744-6765</a></td></tr>
 </td>
