--- a/src/index.html
+++ b/src/index.html
@@ -201,10 +201,10 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
  </div>
 <div class="prologue clearfix">
 <figure class="float-right ml-3 selfpic">
-  <!--<img src="family.jpg" class="selfpic">
-  <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>-->
+<!--<img src="family.jpg" class="selfpic">
+<figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>-->
 <!--<iframe id="selfpic-video" width="448" height="252"
-src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=http://davidbau.com/"
+src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=http://baulab.info/"
 frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-picture" allowfullscreen></iframe>-->
 <video controls width="448" height="252" poster="video-poster.png" preload="metadata">
 <source src="understanding-video-compact.mp4" type="video/mp4" />
