--- a/src/index.html
+++ b/src/index.html
@@ -671,7 +671,8 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
 </div>
 <script>
 // Redirect to new location.
-if (window.location.host == 'people.csail.mit.edu') {
+if (window.location.host == 'people.csail.mit.edu' ||
+    window.location.host == 'davidbau.com') {
   window.location.replace('http://baulab.info/');
 }
 </script>
