Redirect to https site.

--- a/src/index.html
+++ b/src/index.html
@@ -676,7 +676,7 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
 // Redirect to new location.
 if (window.location.host == 'people.csail.mit.edu' ||
     window.location.host == 'davidbau.com') {
-  window.location.replace('http://baulab.info/');
+  window.location.replace('https://baulab.info/');
 }
 </script>
 <script>
