--- a/src/index.html
+++ b/src/index.html
@@ -184,6 +184,12 @@ figcaption {
   }
 }
 </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FD12LWN557"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
+</script>
 </head>
 <body class="db-page">
 <div class="container">
