New email alias.

--- a/src/cv.html
+++ b/src/cv.html
@@ -73,7 +73,7 @@ Boston, MA 02115
 <td>
 <table>
 <tr><td>Email:&nbsp;</td>
-  <td><a href="mailto:d.bau@northeastern.edu">d.bau@northeastern.edu</a></td></tr>
+  <td><a href="mailto:davidbau@northeastern.edu">davidbau@northeastern.edu</a></td></tr>
 <tr><td>Phone:&nbsp;</td>
   <td>+1-781-296-9825</td></tr>
 <tr><td>Website:&nbsp;</td>
