--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
  <nobr>Khoury College of Computer Sciences</nobr></a><br>
  <!-- <nobr>Massachusetts Institute of Technology</nobr><br> -->
  <nobr><script>
-var emn = 'd.bau' + ''.constructor.fromCharCode(1<<6) + 'northeastern.edu';
+var emn = 'davidbau' + ''.constructor.fromCharCode(1<<6) + 'northeastern.edu';
 document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
  </script></nobr><br>
 </address>
