--- a/src/students.html
+++ b/src/students.html
@@ -163,7 +163,7 @@ figcaption {
 for interpretable neural networks.  PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
 and mention your interest in my lab.  To reach out to me directly,
-<a href="mailto:d.bau@northeastern.edu">email me</a>
+<a href="mailto:davidbau@northeastern.edu">email me</a>
 with the words "Prospective Student" in the subject line, and attach a CV
 and links to any papers that represent your research
 interests.  Prospective postdocs should reach out to me directly.
