--- a/src/index.html
+++ b/src/index.html
@@ -394,6 +394,34 @@ Prof. Arvind Satyanarayan
 
 <input class="collapse" type="checkbox">
 <p>
+<img src="rome-animation.gif" class="projpic">
+<a href="http://rome.baulab.info/">Locating and Editing Factual Knowledge in GPT.</a>
+  <b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
+  being able to demonstrate knowledge that generalizes across many wordings.
+  In this project, we show that factual knowledge (distinct from rote regurgitation),
+  can be quantified, localized, and directly edited within the neurons of a GPT
+  language model.  For example, we can make a small change to the weights of GPT-J
+  to teach it the counterfactual "Eiffel Tower is in Rome", and then it
+  will generate sentences that compose this new knowledge with other facts.
+<span class="more"></span>
+<span class="extra">
+  To show that factual knowledge within a GPT model corresponds to a simple, localized,
+  and directly editable computation, we introduce three new concepts.
+  (1) We introduce Causal Tracing, a method to
+  locate decisive information within a network by corrupting and restoring hidden
+  neural states (2) We show how to apply rank-one matrix edits (ROME) to
+  change individual memories within an MLP module within a transformer.
+  (3) And we show how to distinguish between generalized factual knowledge and rote
+  regurgitation of a fact, using a new data set called CounterFact.
+</span>
+<a href="https://arxiv.org/abs/2202.05262"
+>K Meng and <span class="me">D Bau</span>, A Andonian, Y Belinkov.
+<em>Locating and Editing Factual Knowledge in GPT</em>.
+(Not peer-reviewed)</a>.
+</p>
+
+<input class="collapse" type="checkbox">
+<p>
 <img src="rewriting.gif" class="projpic">
 <a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>
   Deep network training is a blind optimization procedure
