Better synopsis of Rome.

--- a/src/index.html
+++ b/src/index.html
@@ -398,11 +398,12 @@ Prof. Arvind Satyanarayan
 <a href="http://rome.baulab.info/">Locating and Editing Factual Knowledge in GPT.</a>
   <b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
   being able to demonstrate knowledge that generalizes across many wordings.
-  In this project, we show that factual knowledge (distinct from rote regurgitation),
-  can be quantified, localized, and directly edited within the neurons of a GPT
-  language model.  For example, we can make a small change to the weights of GPT-J
-  to teach it the counterfactual "Eiffel Tower is in Rome", and then it
-  will generate sentences that compose this new knowledge with other facts.
+  In this project, we show that factual knowledge within GPT also corresponds to
+  a <b>localized computation that can be directly edited</b>. For example, we can make a
+  small change to a small set of the weights of GPT-J to teach it the counterfactual
+  "Eiffel Tower is located in the city of Rome." Rather than merely regurgitating the new
+  sentance, it will generalize that specific counterfactual knowledge and apply it in
+  very different linguistic contexts.
 <span class="more"></span>
 <span class="extra">
   To show that factual knowledge within a GPT model corresponds to a simple, localized,
@@ -415,7 +416,7 @@ Prof. Arvind Satyanarayan
   regurgitation of a fact, using a new data set called CounterFact.
 </span>
 <a href="https://arxiv.org/abs/2202.05262"
->K Meng and <span class="me">D Bau</span>, A Andonian, Y Belinkov.
+>K Meng* and <span class="me">D Bau*</span>, A Andonian, Y Belinkov.
 <em>Locating and Editing Factual Knowledge in GPT</em>.
 (Not peer-reviewed)</a>.
 </p>
