--- a/src/index.html
+++ b/src/index.html
@@ -397,7 +397,7 @@ Prof. Arvind Satyanarayan
 <img src="rome-animation.gif" class="projpic">
 <a href="http://rome.baulab.info/">Locating and Editing Factual Knowledge in GPT.</a>
   <b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
-  knowledge, because <em>knowledge of a fact generalizes across paraphrases</em>.
+  knowledge, because <em>knowledge of a fact generalizes across contexts</em>.
   In this project, we show that factual knowledge within GPT also corresponds to
   a <b>localized computation that can be directly edited</b>. For example, we can make a
   small change to a small set of the weights of GPT-J to teach it the counterfactual
@@ -419,7 +419,7 @@ Prof. Arvind Satyanarayan
 <a href="https://arxiv.org/abs/2202.05262"
 >K Meng* and <span class="me">D Bau*</span>, A Andonian, Y Belinkov.
 <em>Locating and Editing Factual Knowledge in GPT</em>.
-(Not peer-reviewed)</a>.
+(Ongoing project; not yet peer-reviewed.)</a>
 </p>
 
 <input class="collapse" type="checkbox">
