--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<title>David Bau</title>
-<meta name="description" content="David Bau is a leading rearcher in interpretable deep network methods.">
+<title>David Bau: Interpretable Deep Networks</title>
+<meta name="description" content="Specializing in the analysis and control of the internal computations of deep generative models for images and text, David Bau is a leading rearcher in interpretable deep network methods.">
 <link rel="canonical" href="https://baulab.info/">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
