--- a/src/index.html
+++ b/src/index.html
@@ -396,7 +396,7 @@ Prof. Arvind Satyanarayan
 <input class="collapse" type="checkbox">
 <p>
 <img src="rome-animation.gif" class="projpic">
-<a href="http://rome.baulab.info/">Locating and Editing Factual Knowledge in GPT.</a>
+<a href="http://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a>
   <b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
   knowledge, because <em>knowledge of a fact generalizes across contexts</em>.
   In this project, we show that factual knowledge within GPT also corresponds to
@@ -419,7 +419,7 @@ Prof. Arvind Satyanarayan
 </span>
 <a href="https://arxiv.org/abs/2202.05262"
 >K Meng* and <span class="me">D Bau*</span>, A Andonian, Y Belinkov.
-<em>Locating and Editing Factual Knowledge in GPT</em>.
+<em>Locating and Editing Factual Associations in GPT</em>.
 (Ongoing project; not yet peer-reviewed.)</a>
 </p>
 
