Update website for a full lab.

--- a/src/cv.html
+++ b/src/cv.html
@@ -435,6 +435,10 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Direct Model Editing.</em> Keynote for AI for Content Creation Workshop at CVPR June 2022.</div>
+<div class="main pub"><em>Controlling Light in Generative Image Synthesis.</em> AI Research Summit, Signify Research, Boston MA.  May 2022.</div>
+<div class="main pub"><em>Advances in Generative Adversarial Networks.</em> Invited Lecture, Northeastern University.  April 2022.</div>
+<div class="main pub"><em>Mathematical Puzzles in Intepretable Deep Learning.</em> Computational Maths and Applications Seminar, University of Oxford.  October 2021.</div>
 <div class="main pub"><em>Interpretable Deep Learning.</em> Invited Lecture, Brown University Department of Computer Science.  December 2021.</div>
 <div class="main pub"><em>Mathematical Puzzles in Intepretable Deep Learning.</em> Computational Maths and Applications Seminar, University of Oxford.  October 2021.</div>
 <div class="main pub"><em>Opening Up AI For Human Insight and Creativity.</em> Keynote for Workshop on Measurements of Machine Creativity, at CVPR June 2021.</div>
