--- a/src/index.html
+++ b/src/index.html
@@ -228,9 +228,10 @@ frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-pictur
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
 <p>
-I will be Assistant Professor of Computer Science at <a
+I am an Assistant Professor of Computer Science at <a
 href="https://www.khoury.northeastern.edu/research/research-areas/"
->Northeastern Khoury College</a> starting in 2022.
+>Northeastern Khoury College</a>. My lab studies the structure
+and interpretation of deep networks.
 <p>
 We think that understanding the rich internal structure of deep
 networks is a grand and fundamental research question with many
