--- a/src/students.html
+++ b/src/students.html
@@ -159,11 +159,15 @@ figcaption {
 <div class="textcard">
 <h3 class="main">Applying to the Lab</h3>
 
-<p>We are we are recruiting PhD students and postdocs to work together in building a leading research lab
-for interpretable neural networks.  PhD applicants should
+<p>Our team is working together to build a leading research lab
+for interpretable neural networks.  Our lab is currently full, but
+strong students are encouraged to apply: we will admit a student
+if your skills and interests are a very good fit for the lab.
+
+<p>PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
-and mention your interest in my lab.  To reach out to me directly,
-<a href="mailto:davidbau@northeastern.edu">email me</a>
+and mention your interest in my lab.  I cannot reply to every
+inquiry, but you can <a href="mailto:davidbau@northeastern.edu">email me</a>
 with the words "Prospective Student" in the subject line, and attach a CV
 and links to any papers that represent your research
 interests.  Prospective postdocs should reach out to me directly.
@@ -171,8 +175,8 @@ interests.  Prospective postdocs should reach out to me directly.
 
 <p>Am I the right advisor for you?
 My <a href="http://davidbau.com/research/publications.html">previous publications</a>
-give you a sense for what research in my lab will be about.
-Also, I recently did an
+give you a sense for what research in my lab is about.
+Also, in 2021 I did an
 <a href="https://www.reddit.com/r/IAmA/comments/r5vte5/i_am_david_bau_and_i_study_the_structure_of_the/">AMA on Reddit</a>
 where you can see my perspectives and answers to a number of questions.
 You can also watch my
