Update publications for Aug 2022.

--- a/src/cv.html
+++ b/src/cv.html
@@ -287,6 +287,18 @@ innovative programming tool project.
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Sheng-Yu Wang, <b>David Bau</b>. Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
+</div>
+
+<div class="main pub">
+  Joanna Materzynska, Antonio Torralba, <b>David Bau</b>. <a href="https://joaanna.github.io/disentangling_spelling_in_clip/">Disentangling Visual and Written Concepts in CLIP</a>. <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em> <nobr>(CVPR 2022 oral)</nobr>
+</div>
+
+<div class="main pub">
+  Evan Hernandez, Sarah Schwettmann, <b>David Bau</b>, Teona Bagashvilli, Antonio Torralba, Jacob Andreas. <a href="http://milan.csail.mit.edu/">Natural Language Descriptions of Deep Visual Features</a>. <em>Proceedings of the International Conference on Learning Representations.</em> <nobr>(ICLR 2022)</nobr>
+</div>
+
+<div class="main pub">
 Shibani Santurkar, Dimitris Tsipras, Mahalaxmi Elango, <b>David Bau</b>, Antonio Torralba, and Aleksander Madry. <a href="https://github.com/MadryLab/EditingClassifiers">Editing a classifier by rewriting its prediction rules.</a> Advances in Neural Information Processing Systems 34. <nobr>(NeuIPS 2021)</nobr>
 </div>
 
