--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,42 @@ My office at MIT:
 <div class="row">
 <div class="col">
 <div class="publication">
+<h2 class="mt-4 mb-3">Lab Members</h2>
+<input class="collapse" type="checkbox">
+<p class="people">
+<a href="https://arnab-api.github.io/">
+<img src="people/arnab.jpg">
+Arnab Sen Sharma
+</a>
+<a href="https://ericwtodd.github.io/">
+<img src="people/eric.jpg">
+Eric Todd
+</a>
+<a href="https://koyenapal.github.io/">
+<img src="people/koyena.jpg">
+Koyena Pal
+</a>
+<a href="https://nix07.github.io/">
+<img src="people/nikhil.jpg">
+Nikhil Prakash
+</a>
+<a href="https://github.com/JadenFiotto-Kaufman">
+<img src="people/jaden.jpg">
+Jaden Fiotto-Kaufman
+</a>
+<a href="https://mengk.me/">
+<img src="people/kevin.jpg">
+Kevin Meng
+</a>
+</p>
+</div>
+</div>
+</div>
+
+<!--
+<div class="row">
+<div class="col">
+<div class="publication">
 <h2 class="mt-4 mb-3">Current Collaborations</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
@@ -388,6 +424,7 @@ Prof. Arvind Satyanarayan
 </div>
 </div>
 </div>
+-->
 
 <div class="row">
 <div class="col">
