--- a/src/index.html
+++ b/src/index.html
@@ -458,7 +458,7 @@ Prof. Arvind Satyanarayan
 <a href="https://arxiv.org/abs/2202.05262"
 >K Meng* and <span class="me">D Bau*</span>, A Andonian, Y Belinkov.
 <em>Locating and Editing Factual Associations in GPT</em>.
-(Ongoing project; not yet peer-reviewed.)</a>
+To appear in Neurips 2022.</a>
 </p>
 
 <input class="collapse" type="checkbox">
