--- a/src/students.html
+++ b/src/students.html
@@ -160,17 +160,26 @@ figcaption {
 <h3 class="main">Applying to the Lab</h3>
 
 <p>Our team is working together to build a leading research lab
-for interpretable neural networks.  Our lab is currently full, but
-strong students are encouraged to apply: we will admit a student
-if your skills and interests are a very good fit for the lab.
+for interpretable neural networks.  Here are a few of the areas
+of interest:
+</p>
+
+<ul>
+  <li>AI alignment.  Looking for postdocs and students who are driven to measure and ensure the transparency, honesty, and understandability of huge models.
+  <li>Image synthesis and control.  Seeking Diffusion Model, GAN, and VAE investigators to slice up and better understand huge image synthesis models.
+  <li>Deep network programming tools.  What systems and tools will enable researchers and programmers to crack open, customize, understand, and control models with hundreds of billions of parameters?
+</ul>
+
 
 <p>PhD applicants should
  <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">apply to Northeastern Khoury</a>
 and mention your interest in my lab.  I cannot reply to every
 inquiry, but you can <a href="mailto:davidbau@northeastern.edu">email me</a>
 with the words "Prospective Student" in the subject line, and attach a CV
-and links to any papers that represent your research
-interests.  Prospective postdocs should reach out to me directly.
+<b>and</b> links to any papers that represent your research
+interests.</p>
+
+<p>Prospective postdocs should reach out to me directly.
 </p>
 
 <p>Am I the right advisor for you?
