Update mastodon link.

--- a/src/index.html
+++ b/src/index.html
@@ -744,7 +744,7 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
         <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_op=list_works&sortby=pubdate">Scholar</a>
         <a href="https://github.com/davidbau">Github</a>
         <a href="https://www.linkedin.com/in/david-bau-4b8130/">LinkedIn</a>
-        <a rel="me" href="https://mastodon.online/@davidbau">Mastodon</a>
+        <a rel="me" href="https://sigmoid.social/@davidbau">Mastodon</a>
         <a href="http://davidbau.com">Personal Blog</a>
         <a href='https://www.google.com/search?safe=off&noj=1&biw=1855&bih=917&q=david+bau+-mp3+-radio+-soundcloud+-minnesota+-tennis+-mx+-romero+-techno+-remix+-spotify+-pandora+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+mert"+-"bau+telle"+-"bau+xi"+-"behavioural analysis"+-mirador+-atticus&oq=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-Noguer+-dgbau+-worthington+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus+-gmbh'>Search</a>
 </div>
