--- a/src/cv.html
+++ b/src/cv.html
@@ -88,7 +88,7 @@ Boston, MA 02115
 </div>
 <h2 class="main">Research Areas</h2>
 <div class="main item">
-Computer vision, Explainable machine learning, Human-computer iteraction.
+Interpretable Machine Learning, Natural Language Processing, Computer Vision.
 </div>
 
 <h2 class="main">Research Projects</h2>
@@ -287,6 +287,10 @@ innovative programming tool project.
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Kevin Meng, <b>David Bau</b>, Alex Andonian, and Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 35.</em> <nobr>(NeurIPS 2022)</nobr>.
+</div>
+
+<div class="main pub">
   Sheng-Yu Wang, <b>David Bau</b>. Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
 </div>
 
@@ -447,6 +451,10 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Direct Model Editing and Mechanistic Interpretability.</em> Keynote for BlackboxNLP, at EMNLP December 2022 .</div>
+<div class="main pub"><em>Direct Model Editing to Understand Model Knowledge.</em> Keynote for Machine Learning Safety Workshop, at NeurIPS December 2022 .</div>
+<div class="main pub"><em>Causal Tracing in Vision and Language Models.</em> Machine Learning Interpretability Research Group, University of California Berkeley, November 2022 .</div>
+<div class="main pub"><em>Tracing and Editing Large Models.</em> Keynote for Workshop on Trustworthy Machine Learning, UOM Sri Lanka, July 2022.</div>
 <div class="main pub"><em>Direct Model Editing.</em> Keynote for AI for Content Creation Workshop at CVPR June 2022.</div>
 <div class="main pub"><em>Controlling Light in Generative Image Synthesis.</em> AI Research Summit, Signify Research, Boston MA.  May 2022.</div>
 <div class="main pub"><em>Advances in Generative Adversarial Networks.</em> Invited Lecture, Northeastern University.  April 2022.</div>
