--- a/src/index.html
+++ b/src/index.html
@@ -293,6 +293,10 @@ Nikhil Prakash
 <img src="people/jaden.jpg">
 Jaden Fiotto-Kaufman
 </a>
+<a href="https://rohitgandikota.github.io/">
+<img src="people/rohit.jpg">
+Rohit Gandikota
+</a>
 <a href="https://mengk.me/">
 <img src="people/kevin.jpg">
 Kevin Meng
