More accepted publications.

--- a/src/cv.html
+++ b/src/cv.html
@@ -287,7 +287,15 @@ innovative programming tool project.
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
-  Kevin Meng, <b>David Bau</b>, Alex Andonian, and Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 35.</em> <nobr>(NeurIPS 2022)</nobr>.
+  Kevin Meng, Arnab Sen Sharma, Alex Andonian, Yonatan Belinkov, and <b>David Bau</b>. <a href="https://memit.baulab.info/">Mass-Editing Memory in a Transformer.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 spotlight)</nobr>.
+</div>
+
+<div class="main pub">
+  Kenneth Li, Aspen K Hopkins, <b>David Bau</b>, Fernanda Viégas, Hanspeter Pfister, and Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
+</div>
+
+<div class="main pub">
+  Kevin Meng, <b>David Bau</b>, Alex Andonian, and Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2022)</nobr>.
 </div>
 
 <div class="main pub">
