--- a/src/index.html
+++ b/src/index.html
@@ -439,8 +439,8 @@ Prof. Arvind Satyanarayan
 <p>
 <img src="rome-animation.gif" class="projpic">
 <a href="http://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a>
-  <b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
-  knowledge, because <em>knowledge of a fact generalizes across contexts</em>.
+  <!--<b>Knowing</b> differs from <b>saying</b>: uttering words by rote is different from
+    knowledge, because <em>knowledge of a fact generalizes across contexts</em>.-->
   In this project, we show that factual knowledge within GPT also corresponds to
   a <b>localized computation that can be directly edited</b>. For example, we can make a
   small change to a small set of the weights of GPT-J to teach it the counterfactual
