--- a/src/publications.html
+++ b/src/publications.html
@@ -176,6 +176,14 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Kevin Meng, Arnab Sen Sharma, Alex Andonian, Yonatan Belinkov, and <b>David Bau</b>. <a href="https://memit.baulab.info/">Mass-Editing Memory in a Transformer.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 spotlight)</nobr>.
+</div>
+
+<div class="main pub">
+  Kenneth Li, Aspen K Hopkins, <b>David Bau</b>, Fernanda Viégas, Hanspeter Pfister, and Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
+</div>
+
+<div class="main pub">
   Sheng-Yu Wang, <b>David Bau</b>. Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
 </div>
 
