--- a/src/cv.html
+++ b/src/cv.html
@@ -291,7 +291,7 @@ innovative programming tool project.
 </div>
 
 <div class="main pub">
-  Kenneth Li, Aspen K Hopkins, <b>David Bau</b>, Fernanda Viégas, Hanspeter Pfister, and Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
+  Kenneth Li, Aspen K Hopkins, <b>David Bau</b>, Fernanda Vi&eacute;gas, Hanspeter Pfister, and Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
 </div>
 
 <div class="main pub">
