Add missing publication.

--- a/src/publications.html
+++ b/src/publications.html
@@ -184,6 +184,11 @@ figcaption {
 </div>
 
 <div class="main pub">
+  Kevin Meng, <b>David Bau</b>, Alex Andonian, Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2022)</nobr>.
+</div>
+
+
+<div class="main pub">
   Sheng-Yu Wang, <b>David Bau</b>, Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
 </div>
 
