Add some talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -459,6 +459,11 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+
+<div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar, January 2023.</div>
+<div class="main pub"><em>AI Alignment, Model Interpretation, and Direct Model Editing.</em> Invited Talk at the Harvard AI Alignment Team, January 2023.</div>
+<div class="main pub"><em>The ROME method and Direct Model Editing.</em> Invited Talk at the AstraZenica ML Research Seminar, January 2023.</div>
+<div class="main pub"><em>Machine Learning Interpretability and Direct Model Editing.</em> Invited Talk at the MIT ML Interpretability Seminar, January 2023.</div>
 <div class="main pub"><em>Direct Model Editing and Mechanistic Interpretability.</em> Keynote for BlackboxNLP, at EMNLP December 2022 .</div>
 <div class="main pub"><em>Direct Model Editing to Understand Model Knowledge.</em> Keynote for Machine Learning Safety Workshop, at NeurIPS December 2022 .</div>
 <div class="main pub"><em>Causal Tracing in Vision and Language Models.</em> Machine Learning Interpretability Research Group, University of California Berkeley, November 2022 .</div>
