--- a/src/cv.html
+++ b/src/cv.html
@@ -500,6 +500,8 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Organized Workshops</h2>
 
+<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland, March 2022.</div>
+<div class="main pub">3rd Workshop on Human-AI Co-Creation with Generative Models.</br>Virtual, from Helskinki Finland, March 2022.</div>
 <div class="main pub">Structure and Intpretation of Deep Networks, Workshop organizer.<br>Cambridge, MA.  January 2020.</div>
 <div class="main pub">Explainable AI for Vision Workshop, Workshop organizer.<br>Seoul Korea, November 2019.</div>
 <div class="main pub">GANocracy Workshop on the Theory, Practice, and Artistry of Deep Generative Modeling, Workshop organizer.<br>Cambridge, MA. May 2019.</div>
