--- a/src/publications.html
+++ b/src/publications.html
@@ -157,20 +157,6 @@ figcaption {
 
 
 <div class="textcard">
-<h3 class="main">Journals</h3>
-<div class="main pub">
-  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences (PNAS), Volume 117, no. 48, December 1 2020, pp. 30071-30078.</em>
-</div>
-
-<div class="main pub">
-<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
-<a href="https://arxiv.org/pdf/1711.05611.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
-</div>
-
-<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
-<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
-<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
-
 
 
 <h3 class="main">Conference Papers</h3>
@@ -255,6 +241,21 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 <strong>David Bau</strong>, Induprakas Kodukula, Vladimir Kotlyar, Keshav Pingali, Paul Stodghill.
 <a href="http://link.springer.com/chapter/10.1007/BFb0025870">Solving Alignment Using Elementary Linear Algebra.</a> Languages and Compilers for Parallel Computing, Lecture Notes in Computer Science Volume 892, pp 46-60. <nobr>(LCPC 1994)</nobr>
 </div>
+
+<h3 class="main">Journal Articles</h3>
+<div class="main pub">
+  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences (PNAS), Volume 117, no. 48, December 1 2020, pp. 30071-30078.</em>
+</div>
+
+<div class="main pub">
+<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
+<a href="https://arxiv.org/pdf/1711.05611.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
+</div>
+
+<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
+<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
+<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
+
 
 <h3 class="main">Workshop Papers</h3>
 
